Created login component with basic styling Co-authored-by: Mason France <masonrf1@gmail.com>

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -1,8 +1,10 @@
 header {
     h1{
-        background-color: #000;
+        align-items: center;
+        background-color: lightgrey;
         color: #FFF;
         display: flex;
+        height: 90px;
         justify-content: center;
     }
 }
