added basic redux

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -5,6 +5,7 @@ header {
         color: #FFF;
         display: flex;
         height: 90px;
-        justify-content: center;
+        justify-content: flex-start;
+        padding-left: 150px;
     }
 }
