--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -6,6 +6,10 @@
     form {
         display: flex;
 
+        input {
+            height: 25px;
+        }
+
         label {
             display: flex;
             flex-direction: column;
