added basic styling

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,3 +3,5 @@
 @import './app';
 @import '../components/Header/header';
 @import '../components/Login/login';
+@import '../components/Movies/movies';
+@import '../components/MovieCard/movieCard';
