incorporated redux and add movie info pages

--- a/src/components/MovieCard/_movieCard.scss
+++ b/src/components/MovieCard/_movieCard.scss
@@ -7,9 +7,13 @@
                          "image info info"
                          "image info info"
                          "image info info";
+
+    &:link, &:active   {
+        text-decoration: none;
+    }
 }
 
-.movie-image {
+.card-image {
     grid-area: image;
     justify-content: center;
     margin: 10px 10px 0 0;
