--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,4 +4,5 @@
 @import '../components/Header/header';
 @import '../components/Login/login';
 @import '../components/Movies/movies';
+@import '../components/MovieInfo/movieInfo';
 @import '../components/MovieCard/movieCard';
