--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,18 +1,20 @@
 @mixin card-design() {
   background-color: #FFF;
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 15px;
   box-sizing: content-box;
-  box-shadow: 5px 5px 5px 5px #E0E0E0;
+  box-shadow: 3px 3px 3px 3px #E0E0E0;
   color: #000;
   display: grid;
   height: 350px;
-  margin: 20px;
-  padding: 20px;
+  margin: 15px;
+  padding: 15px;
   text-align: center;
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.3s;
   transition-property: transform;
   -webkit-transition-duration: 0.3s;
   -webkit-transition-property: transform;
-  width: 400px;
+  width: 220px;
 }
