--- a/src/components/MovieCard/_movieCard.scss
+++ b/src/components/MovieCard/_movieCard.scss
@@ -27,8 +27,8 @@
     grid-area: date;
 }
 
-.movie-info {
-    display: flex;
-    justify-content: flex-start;
-    grid-area: info;
-}
+// .movie-info {
+//     display: flex;
+//     justify-content: flex-start;
+//     grid-area: info;
+// }
