--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -1,11 +1,14 @@
 header {
-    h1{
         align-items: center;
-        background-color: lightgrey;
-        color: #FFF;
+        background-color: $baby;
+        border-bottom: 3px solid $ground;
         display: flex;
+        justify-content: space-between;
+    h1{
+        color: $flash;
         height: 90px;
         justify-content: flex-start;
+        padding-top: 28px;
         padding-left: 150px;
     }
 }
