added signup form to main page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,3 +6,4 @@
 @import '../components/Movies/movies';
 @import '../components/MovieInfo/movieInfo';
 @import '../components/MovieCard/movieCard';
+@import '../components/SignUpForm/signUpForm';
