--- a/src/components/MovieInfo/_movieInfo.scss
+++ b/src/components/MovieInfo/_movieInfo.scss
@@ -6,7 +6,7 @@
   grid-template-columns: 40% 60%;
   height: 500px;
   left: 5%;
-  margin-top: 20px;
+  margin: 20px 0 100px 0;
   overflow: hidden;
   position: relative;
   width: 90%;
