--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -15,7 +15,7 @@
         }
 
         label {
-            color: $flash;
+            color: $cream;
             display: flex;
             flex-direction: column;
             margin-right: 20px;
