--- a/src/components/SignUpForm/_signUpForm.scss
+++ b/src/components/SignUpForm/_signUpForm.scss
@@ -7,6 +7,7 @@
         }
 
         label {
+            color: $cream;
             display: flex;
             flex-direction: column;
             margin-right: 20px;
