adds favorites to database and renders header based on user choice

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@
 @import './app';
 @import '../components/Header/header';
 @import '../components/Login/login';
+@import '../components/LoggedIn/loggedIn';
 @import '../components/Movies/movies';
 @import '../components/MovieInfo/movieInfo';
 @import '../components/MovieCard/movieCard';
