--- a/src/components/MovieCard/_movieCard.scss
+++ b/src/components/MovieCard/_movieCard.scss
@@ -6,12 +6,18 @@
     }
 
     .star {
+        color: #929292;
         position: absolute;
+        font-size: 20px;
         left: 80%;
         top: 3.5%;
         z-index: 1;
         &:hover {
-            transform: scale(1.1);
+            transform: scale(1.3);
         }
     }
+}
+ 
+.active-favorite {
+    color: #f7f713;
 }
