--- a/src/components/MovieInfo/_movieInfo.scss
+++ b/src/components/MovieInfo/_movieInfo.scss
@@ -3,7 +3,7 @@
   border-radius: 15px;
   color: $smoke;
   display: grid;
-  grid-template-columns: 40% 60%;
+  grid-template-columns: 345px auto;
   height: 500px;
   left: 5%;
   margin: 20px 0 100px 0;
@@ -13,9 +13,7 @@
 }
 
 .movie-image {
-
-  background-size: cover;
-  background-position: center bottom;
+  background-repeat: no-repeat;
   border-right: solid $ground 3px;
   height: 100%;
   width: 100%;
@@ -35,7 +33,7 @@
   height: 100%;
   text-align: center;
   position: relative;
-} 
+}
 
 .movie-title {
   h2 {
@@ -52,6 +50,11 @@
         cursor: pointer;
     }
 }
+
+}
+
+.active-favorite {
+  color: #f7f713;
 }
 
 .release-date {
@@ -66,7 +69,7 @@
    }
    .vote-count {
     font-size: 75%
-   } 
+   }
 }
 
 .movie-description {
