--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -3,7 +3,7 @@
         display: flex;
 
         input {
-            background-color: $flash;
+            background-color: #a5a9d3;
             border: 0;
             font-size: 12px;
             height: 25px;
@@ -25,6 +25,7 @@
 
 .pointer {
     cursor: pointer;
+    color: $cream;
 }
 
 .login-btn {
