--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+body {
+  background-color: $air;
+}
+
 .app {
   background-color: $air;
   font-family: 'News Cycle', sans-serif;
